--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,6 +2,7 @@
 # defaults file for lighttpd-server
 lighttpd:
   vhosts_dir: '/var/www/domains'
+  vhosts_htdocs: 'public'
   RedHat:
     service: lighttpd.service
     packages:
